--- a/index.html
+++ b/index.html
@@ -140,5 +140,6 @@
         <a href="mailto:nidhikedilaya@gmail.com">nidhikedilaya@gmail.com</a>
       </p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
